--- a/style.css
+++ b/style.css
@@ -53,3 +53,21 @@ top : 0;
 right: 0;
 }
 top : 116px;
+.caixa {
+}
+.caixa {
+width: 940px;
+}
+.caixa {
+width: 940px;
+position:relative;
+}
+caixa {
+width: 940px;
+position:relative;
+margin: 0 auto;
+}
+header {
+background: #BBBBBB;
+padding:20px;
+}
