--- a/style.css
+++ b/style.css
@@ -3,3 +3,46 @@ header {
 header {
 background: #BBBBBB;
 }
+nav li {
+display: inline;
+}
+nav li {
+display: inline;
+}
+nav a {
+text-transform: uppercase;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+font-size: 22px;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+font-size: 22px;
+text-decoration: none;
+}
+nav li {
+display: inline;
+margin:
+}
+nav li {
+display: inline;
+margin:
+}
+nav li {
+display: inline;
+margin: 0 0 0 15px;
+}
